<?xml version="1.0" encoding="utf-8"?><!DOCTYPE resources [  <!ENTITY appname "Image Saver">  <!ENTITY author "Michael Standen">  ]>

<resources>
	<string name="app_name">&appname;</string>

	<!-- Menu -->
	<string name="action_settings">Settings</string>
	<string name="action_change_log">Change Log</string>
	<string name="action_credits">Credits</string>

	<!-- Main -->
	<string name="main_title">Welcome to Image Saver!</string>
	<string name="main_body">Use the share feature to save an image.</string>

	<!-- Saver -->
	<string name="image_placeholder">Loading…</string>
	<string name="sorry">Sorry!!!</string>
	<string name="sorry_error">Sorry an error occurred!!!</string>
	<string name="sorry_error_subtext">Please screenshot this for &author; to fix…</string>
	<string name="cannot_save">This link is not supported…</string>

	<string name="previous_button">Prev</string>
	<string name="next_button">Next</string>

	<!-- Notification -->
	<string name="toast_save_success">Saved successfully</string>
	<string name="toast_save_failed">Saving failed</string>

	<!-- Settings -->
	<string name="title_activity_settings">Settings</string>

	<string name="setting_folder_name_title">Default folder name</string>
	<string name="setting_folder_name_default">&appname;</string>

	<string name="setting_no_media_title">Hide saved images</string>
	<string name="setting_no_media_summary">Prevent images showing in gallery applications.
		Note: This only applies to the default folder</string>

	<string name="setting_completed_toast_title">Save completed notification</string>
	<string name="setting_completed_toast_summary">Display a notification when saving is completed</string>

	<string name="setting_random_filename_title">Randomize filename</string>
	<string name="setting_random_filename_summary">Save files with a randomized filename</string>

	<!-- Credits -->
	<string name="credits_version">v%1$s</string>
	<string name="title_activity_credits">About &appname;</string>
	<string name="logo_description">Logo</string>
	<string name="credits_creator">by <a href="https://michael.standen.link">&author;</a></string>
	<string name="credits_content1">Image Saver is a simple application for saving images to your
		phone through the share feature.
	</string>
	<string name="credits_content2">You can view the source code, log bugs, and request features on
		<a href="https://github.com/ScreamingHawk/image-saver">Github</a>.
	</string>
	<string name="credits_content3">This application is completely open source; it is licensed under the
		<a href="https://tldrlegal.com/license/mit-license">MIT license</a>.
	</string>
	<string name="credits_content_translator">This translation of &appname; was provided by
		<a href="https://michael.standen.link">&author;</a>.
	</string>

	<!-- Change log -->
	<string name="changelog_full_title">Change Log</string>
	<string name="changelog_title">What\'s New</string>
	<string name="changelog_ok_button">OK</string>
	<string name="changelog_show_full">Show all&#8230;</string>
</resources>
