<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:orientation="vertical"
	android:paddingTop="@dimen/main_padding"
	app:layout_behavior="@string/appbar_scrolling_view_behavior"
	tools:context=".activity.MainActivity"
	tools:showIn="@layout/main_activity">

	<ImageView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal"
		android:contentDescription="@string/logo_description"
		android:padding="@dimen/main_padding"
		android:src="@mipmap/ic_launcher" />

	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="center_horizontal"
		android:padding="@dimen/main_padding"
		android:text="@string/main_title"
		android:textAppearance="@style/TextAppearance.AppCompat.Large" />

	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="center_horizontal"
		android:padding="@dimen/main_padding"
		android:text="@string/main_body"
		android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
</LinearLayout>
