<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/container"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".activity.SaverActivity">

	<ImageView
		android:id="@+id/image"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="@dimen/activity_padding"
		android:layout_marginTop="@dimen/activity_padding"
		android:contentDescription="@string/image_placeholder"
		android:visibility="gone"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintBottom_toBottomOf="parent" />

	<TextView
		android:id="@+id/image_placeholder"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="@dimen/activity_padding"
		android:layout_marginTop="@dimen/activity_padding"
		android:text="@string/image_placeholder"
		android:textStyle="italic"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintBottom_toBottomOf="parent"
		android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

	<LinearLayout
		android:id="@+id/no_saver"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:visibility="gone"
		android:layout_marginStart="@dimen/activity_padding"
		android:layout_marginTop="@dimen/activity_padding"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintBottom_toBottomOf="parent">

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/sorry"
			android:textAlignment="center"
			android:textAppearance="@style/TextAppearance.AppCompat.Large" />

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/cannot_save"
			android:textAlignment="center"
			android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

		<TextView
			android:id="@+id/no_saver_link"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:textAlignment="center" />

	</LinearLayout>

	<android.support.design.widget.BottomNavigationView
		android:id="@+id/nav_view"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="0dp"
		android:layout_marginEnd="0dp"
		android:background="?android:attr/windowBackground"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:menu="@menu/saver_nav_menu" />

</android.support.constraint.ConstraintLayout>
