<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	app:layout_behavior="@string/appbar_scrolling_view_behavior"
	tools:context=".activity.SaverActivity"
	tools:showIn="@layout/saver_activity">

	<com.google.android.material.appbar.AppBarLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:theme="@style/AppTheme.AppBarOverlay"
		app:layout_constraintTop_toTopOf="parent" />

	<ProgressBar
		android:id="@+id/progress_bar"
		style="@android:style/Widget.ProgressBar.Horizontal"
		android:layout_width="match_parent"
		android:layout_height="@dimen/progress_bar_height"
		android:indeterminate="true"
		android:max="100"
		android:progress="0"
		android:progressTint="@color/colorAccent"
		android:progressBackgroundTint="@android:color/transparent"
		app:layout_constraintTop_toTopOf="parent" />

	<ImageView
		android:id="@+id/image"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="@dimen/activity_padding"
		android:layout_marginTop="@dimen/activity_padding"
		android:contentDescription="@string/image_placeholder"
		android:visibility="gone"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintBottom_toBottomOf="parent" />

	<LinearLayout
		android:id="@+id/image_placeholder"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:layout_marginStart="@dimen/activity_padding"
		android:layout_marginTop="@dimen/activity_padding"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintBottom_toBottomOf="parent">

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/image_placeholder"
			android:textStyle="italic"
			android:textAlignment="center"
			android:textAppearance="@style/TextAppearance.AppCompat.Large" />

		<TextView
			android:id="@+id/intent_link1"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:textAlignment="center" />

	</LinearLayout>

	<LinearLayout
		android:id="@+id/no_saver"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:visibility="gone"
		android:layout_marginStart="@dimen/activity_padding"
		android:layout_marginTop="@dimen/activity_padding"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintBottom_toBottomOf="parent">

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/sorry"
			android:textAlignment="center"
			android:textAppearance="@style/TextAppearance.AppCompat.Large" />

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/cannot_save"
			android:textAlignment="center"
			android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

		<TextView
			android:id="@+id/intent_link2"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:textAlignment="center" />

	</LinearLayout>

	<com.google.android.material.bottomnavigation.BottomNavigationView
		android:id="@+id/nav_view"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="0dp"
		android:layout_marginEnd="0dp"
		android:background="?android:attr/windowBackground"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:menu="@menu/saver_nav_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>
